# arbalest

./: .gitignore  ArbalestGlobals.cpp  CMakeLists.txt  DatabaseManager.cpp  Document.cpp  GeometryOperationsManager.cpp  Globals.cpp  License  README.md  STYLE  Temp.cpp  Temp.txt  main.cpp  temp.txt
cmake/: FindBRLCAD.cmake  FindBRLCAD_MOOSE.cmake
display/: Camera.cpp  Display.cpp  GraphicsViewOpenGL.cpp  GraphicsViewOpenGL.h  GridRenderer.cpp  VectorListRenderer.cpp
extra/: README.TXT  arbalest_icon.ai  render_icon.ai
extra/db/: goliath.g  m35.g  moss.g
extra/graphics/: close-smaller.xcf  sphere.xcf  torus.xcf
include/: AboutWindow.h  ArbDisplay.h  ArbDisplayGrid.h  ArbDisplayManager.h  ArbalestGlobals.h  ArbalestSettings.h  AxesRenderer.h  Camera.h  CollapsibleWidget.h  ConeProperties.h  ConeSpecificProperties.h  Console.h  DataRow.h  DatabaseManager.h  Display.h  DisplayGrid.h  DisplayManager.h  Dockable.h  Document.h  DragEditLineEdit.h  DragWindowMouseAction.h  GeometryOperationsManager.h  GeometryRenderer.h  Globals.h  GraphicsViewOpenGL.h  GridRenderer.h  HelpWidget.h  MainWindow.h  MatrixTransformWidget.h  MgedWidget.h  MouseAction.h  MoveCameraMouseAction.h  MoveMouseAction.h  ObjectDataField.h  ObjectDataTable.h  ObjectTree.h  ObjectTreeRowButtons.h  ObjectTreeWidget.h  ObjectsTreeView.h  OrthographicCamera.h  (+28 more)
mainwindow/: MainWindow.cpp  MainWindow.ui
resources/: resources.qrc  style.qss
resources/icons/: arbs.xcf  cones.xcf  metaballs.xcf
resources/styles/: arbalest_light.qss  arbalest_light_bk.qss  arbalest_simple.qss
resources/themes/: README.txt  arbalest_dark.theme  arbalest_light (2).scss  arbalest_light.theme
resources/ui/: MainWindow.ui
src/: ArbalestGlobals.cpp  ArbalestSettings.cpp  Dockable.cpp  Document.cpp  GeometryOperationsManager.cpp  Globals.cpp  MainWindow.cpp  ObjectTree.cpp  ObjectsTreeView.cpp  main.cpp
src/display/: ArbDisplayManager.cpp  AxesRenderer.cpp  Camera.cpp  Display.cpp  DisplayManager.cpp  DisplayService.cpp  DragWindowMouseAction.cpp  GeometryRenderer.cpp  GraphicView.cpp  GraphicsViewOpenGL.cpp  GridRenderer.cpp  MouseAction.cpp  MoveCameraMouseAction.cpp  MoveMouseAction.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PressMouseAction.cpp  README.txt  RaytraceView.cpp  ReleaseMouseAction.cpp  SelectMouseAction.cpp  SelectObjectMouseAction.cpp  VListRenderer.cpp  VectorListRenderer.cpp  WheelMouseAction.cpp
src/experiment/: CameraMode.cpp  CameraMode.h  CameraModeMGED.cpp  CameraModeMGED.h
src/gui/: .VerificationValidationWidget.cpp.swp  AboutWindow.cpp  CollapsibleWidget.cpp  Console.cpp  DataRow.cpp  DisplayGrid.cpp  Dockable.cpp  DragEditLineEdit.cpp  HelpWidget.cpp  MainWindow.cpp  MatrixTransformWidget.cpp  MgedWidget.cpp  ObjectDataTable.cpp  ObjectTree.cpp  ObjectTreeRowButtons.cpp  ObjectTreeWidget.cpp  Properties.cpp  QHBoxWidget.cpp  QVBoxWidget.cpp  TestsWidget.cpp  TypeSpecificProperties.cpp  VectorDataRow.cpp  VerificationValidationWidget.cpp  ViewportGrid.cpp  VisibilityButton.cpp
src/gui/typespecificproperties/: ConeProperties.cpp  ConeSpecificProperties.cpp
src/utils/: QSSPreprocessor.cpp  Section.cpp  Utils.cpp  VerificationValidation.cpp  VerificationValidationParser.cpp  debug_utils.cpp
src/viewport/: AxesRenderer.cpp  GeometryRenderer.cpp  GridRenderer.cpp  MouseAction.cpp  MoveCameraMouseAction.cpp  OrthographicCamera.cpp  README.txt  RaytraceView.cpp  SelectMouseAction.cpp  Viewport.cpp  ViewportManager.cpp
src/windows/: MainWindow.cpp
windows/: MainWindow.cpp  MainWindow.ui
